--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -1,13 +1,13 @@
 <div class="container">
   <h1 class="text-center"><%= @artist.name%>'s page</h1>
-
+  <%= button_to "Follow this artist!", action: "create", :artist_id => @artist.id, :controller => "followed_artists", method: :post %>
     <% @artist.concerts.each do |concert|   %>
       <div class="card my-2">
         <div class="card-body">
           <p><strong>Concert's location: </strong><%= concert.location %></p>
           <p><strong>Concert's description: </strong><%= concert.description %></p>
           <p><strong>Date: </strong><%= concert.date %></p>
-            <%= link_to "See more", concert_path(concert), class: "btn btn-info" %>
+          <%= link_to "See more", concert_path(concert), class: "btn btn-info" %>
         </div>
       </div>
     <% end %>
