--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,8 @@
 <div class="container my-3">
   <h1 class="text-center">CONCERTIFY</h1>
-  <h3>Welcome <%= current_user.email  %></h3>
+  <% if user_signed_in? %>
+    <h3>Welcome <%= current_user.email  %></h3>
+  <% end %>
   <%= link_to "See all concerts", concerts_path, class: "btn btn-primary" %>
   <%= link_to "See all artists", artists_path, class: "btn btn-primary" %>
 </div>
