--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -3,3 +3,6 @@
 @import "avatar";
 @import "form_legend_clear";
 @import "navbar";
+@import "concert_card_one";
+@import "layout";
+@import "search";
