added on hover effect for artist

--- a/app/assets/stylesheets/components/_concert_card_one.scss
+++ b/app/assets/stylesheets/components/_concert_card_one.scss
@@ -39,6 +39,9 @@
       font-size: 18px;
       margin: 0px;
     }
+    .card-header > a:hover {
+      color: $color-accent;
+    }
 
     .card-date {
       font-size: 14px;
