--- a/app/views/shared/_concert_card_one.html.erb
+++ b/app/views/shared/_concert_card_one.html.erb
@@ -1,15 +1,19 @@
-
-
-
-
-
-
-
-
-
-      <div class="concert-card">
-        <div class="card-body">
-          <h2><%= link_to "Concert", concert_path(concert)%> by <%= link_to concert.artist.name, artist_path(concert.artist) %></h2>
-          <p><strong>Date: </strong><%= concert.date %></p>
+<div class="card-concert-container">
+  <% @concerts.each do |concert|   %>
+    <div class="card-concert">
+      <div class="card-img">
+        <img src="https://media.istockphoto.com/id/1193274679/photo/excited-crowd-on-a-rock-concert.jpg?s=612x612&w=0&k=20&c=330XDxllhunHf5dt_IwMO2yxPBjXb5j_WMkf_0oWBmU=" alt="concert image">
+      </div>
+      <div class="card-body">
+        <div class="d-flex justify-content-between align-items-center">
+          <p class="card-header mb-2"><%= link_to concert.artist.name, artist_path(concert.artist) %></p>
+          <p class="card-date"><strong></strong><%= concert.date %></p>
+        </div>
+        <p class="card-description"><strong></strong><%= concert.description %></p>
+        <div class="d-flex justify-content-center align-items-center">
+          <button class="btn-accent"><%= link_to "See more", concert_path(concert)%></button>
         </div>
       </div>
+    </div>
+  <% end %>
+</div>
