added box shadow to container

--- a/app/views/concerts/show.html.erb
+++ b/app/views/concerts/show.html.erb
@@ -34,6 +34,6 @@
   </div>
 
   <div>
-    <%= link_to "Go back", root_path, class: "btn btn-info my-5" %>
+    <%= link_to "Go back", root_path, class: "btn btn-light my-5" %>
   </div>
 </div>
