--- a/app/assets/stylesheets/components/_concert_card_one.scss
+++ b/app/assets/stylesheets/components/_concert_card_one.scss
@@ -17,6 +17,10 @@
   box-shadow: 0px 10px 20px rgba(22, 22, 22, 0.3);
   transition: all ease-in-out 0.3s;
 
+  .card-img {
+    position: relative;
+  }
+
   .card-img > img {
     width: 100%;
     height: 180px;
@@ -25,7 +29,25 @@
     border-top-right-radius: 20px;
     border-top-left-radius: 20px;
     border-bottom: 2px solid $color-accent;
+
   }
+  .img-date {
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    z-index: 100;
+    background-color: whitesmoke;
+    color: black;
+    font-weight: bold;
+    padding: 2px 10px;
+    border-radius: 5px;
+    font-size: 14px;
+    border: 0px;
+    button {
+      border: 0px;
+    }
+  }
+
 
   .card-body {
     padding: 20px 20px;
@@ -36,7 +58,7 @@
       text-decoration: none;
       font-family: $headers-font;
       font-weight: bold;
-      font-size: 18px;
+      font-size: 20px;
       margin: 0px;
     }
     .card-header > a:hover {
@@ -54,7 +76,20 @@
       font-family: $body-font;
       margin: 0px;
       color: rgba(255, 255, 255, 0.705);
-      height: 80px;
+      height: 60px;
+    }
+    .save {
+      background-color: rgb(240, 232, 128);
+      border: 0px;
+      font-size: 14px;
+      color: #353535;
+      padding: 3px 20px;
+      border-radius: 5px;
+      margin: 0;
+    }
+    .save:hover {
+      background-color: rgb(224, 216, 93);
+
     }
   }
 }
