--- a/app/assets/stylesheets/components/_layout.scss
+++ b/app/assets/stylesheets/components/_layout.scss
@@ -36,7 +36,7 @@
   a {
     text-decoration: none;
     font-size: 16px;
-    color: $color-dark;
+    color: $color-white;
     font-family: $headers-font;
   }
 }
