--- a/app/views/concerts/index.html.erb
+++ b/app/views/concerts/index.html.erb
@@ -38,6 +38,6 @@
   </div>
 
   <div>
-    <%= link_to "Go back", root_path, class: "btn btn-info my-5" %>
+    <%= link_to "Go back", root_path, class: "btn btn-light my-5 rounded" %>
   </div>
 </div>
