--- a/app/views/concerts/show.html.erb
+++ b/app/views/concerts/show.html.erb
@@ -3,7 +3,7 @@
   <div class="show-concert-container">
     <div class="concert-title">
       <h2><%= link_to @concert.artist.name.upcase, artist_path(@concert.artist) %></h2>
-      <p><%= @concert.date.strftime("%B %Y") %></p>
+      <p>Concert in <u><%= @concert.date.strftime("%B %Y") %></u></p>
     </div>
     <div class="concert-body">
       <img src="https://cdn.vysokeskoly.cz/czech-universities/uploads/2020/01/3380.jpg" alt="concert photo">
