--- a/app/assets/stylesheets/pages/_concert_show.scss
+++ b/app/assets/stylesheets/pages/_concert_show.scss
@@ -127,7 +127,7 @@
       button {
         background-color: transparent;
         border: 0px;
-        color: #292929;
+        color: white;
       }
     }
     .box-save:hover {
