--- a/app/views/saved_concerts/index.html.erb
+++ b/app/views/saved_concerts/index.html.erb
@@ -1,12 +1,34 @@
-<div class="container">
+<div class="layout-container">
 
-  <% @saved_concerts.each do |c| %>
-    <div class="card my-2">
-      <div class="card-body">
-        <strong><%= link_to c.concert.artist.name, concert_path(c.concert) %></strong>
-        <%= c.concert.location %>
+  <div class="banner-one">
+    <h1 class="text-center">Don't forget these concerts!</h1>
+  </div>
+
+
+  <div class="card-concert-container">
+    <% @saved_concerts.each do |concert|   %>
+
+      <div class="card-concert">
+        <div class="card-img">
+          <img src="https://media.istockphoto.com/id/1193274679/photo/excited-crowd-on-a-rock-concert.jpg?s=612x612&w=0&k=20&c=330XDxllhunHf5dt_IwMO2yxPBjXb5j_WMkf_0oWBmU=" alt="concert image">
+          <p class="img-date"><%= concert.concert.date %></p>
+
+        </div>
+        <div class="card-body">
+          <div class="d-flex justify-content-between align-items-center">
+            <div><p class="card-header mb-2"><%= link_to concert.concert.artist.name, artist_path(concert.concert.artist) %></p></div>
+            <div><p><%= button_to "Save", {action: "create", :concert_id => concert.concert.id, :controller => "saved_concerts", method: :post}, {class: "save"} %></p></div>
+          </div>
+          <p class="card-description"><strong></strong><%= concert.concert.location %></p>
+          <div class="d-flex justify-content-center align-items-center">
+            <button class="btn-accent"><%= link_to "See more", concert_path(concert.concert)%></button>
+          </div>
+        </div>
       </div>
-    </div>
-  <% end %>
+    <% end %>
+  </div>
 
+  <div>
+    <%= link_to "Go back", root_path, class: "btn btn-light my-5 rounded" %>
+  </div>
 </div>
