--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,13 +1,40 @@
-<div class="container">
-  <h1 class="text-center">All Artists</h1>
 
-    <% @artists.each do |artist|   %>
-      <div class="card my-2">
-        <div class="card-body">
-          <h2><%= link_to "#{artist.name}", artist_path(artist)%></h2>
-          <p><strong>Description: </strong><%= artist.description %></p>
-        </div>
-      </div>
+<div class="layout-container">
+
+  <div class="banner-one">
+    <h1 class="text-center">Who do you want to see?</h1>
+    <%= form_with url: artists_path, method: :get, class: "d-flex search-form-border" do %>
+      <%= text_field_tag :query,
+        params[:query],
+        class: "form-control search-input-dark",
+        placeholder: "Find an artist"
+      %>
+      <%= submit_tag "Search", class: "search-btn" %>
     <% end %>
-  <%= link_to "Go back", root_path, class: "btn btn-primary" %>
+  </div>
+
+
+  <div class="card-artist-container">
+    <% @artists.each do |artist|   %>
+      <div class="artist-card">
+        <div class="artist-card-img">
+          <img id="x" src="https://images.unsplash.com/photo-1605722243979-fe0be8158232?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8Mnx8fGVufDB8fHx8&w=1000&q=80" alt="artist photo">
+        </div>
+        <div class="artist-card-body">
+          <h2><%= link_to "#{artist.name}", artist_path(artist)%></h2>
+          <p><%= artist.description %></p>
+          <div class="artist-card-btn">
+            <%= button_to "Follow!", {action: "create", :artist_id => artist.id, :controller => "followed_artists", method: :post}, {class: ""} %>
+          </div>
+        </div>
+
+      </div>
+
+
+    <% end %>
+  </div>
+
+  <div>
+    <%= link_to "Go back", root_path, class: "btn btn-light my-5 rounded" %>
+  </div>
 </div>
