--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="home-container">
   <div class="home-banner">
     <div class="heading">
-      <h1 class="text-center neon-Text">Find your favourite concerts with...</h1>
+      <h1 class="text-center neon-Text">Find your favourite concerts with us</h1>
       <% if user_signed_in? %>
         <h5 class="text-center">Welcome <%= current_user.email  %></h5>
       <% end %>
