copied style for followed artists + added icon to saved concerts

--- a/app/assets/stylesheets/components/_layout.scss
+++ b/app/assets/stylesheets/components/_layout.scss
@@ -45,3 +45,9 @@
   font-weight: bold;
   box-shadow: 0px 0px 15px #39aea88a;
 }
+.pink {
+  color: lightcoral;
+}
+.yellow {
+  color: rgb(255, 205, 69);
+}
