--- a/app/views/saved_concerts/index.html.erb
+++ b/app/views/saved_concerts/index.html.erb
@@ -1,7 +1,7 @@
 <div class="layout-container">
 
   <div class="banner-one">
-    <h1 class="text-center">Don't forget these concerts!</h1>
+    <h1 class="text-center">Your saved concerts <i class="fa-solid fa-star yellow"></i></h1>
   </div>
 
 
@@ -17,7 +17,6 @@
         <div class="card-body">
           <div class="d-flex justify-content-between align-items-center">
             <div><p class="card-header mb-2"><%= link_to concert.concert.artist.name, artist_path(concert.concert.artist) %></p></div>
-            <div><p><%= button_to "Save", {action: "create", :concert_id => concert.concert.id, :controller => "saved_concerts", method: :post}, {class: "save"} %></p></div>
           </div>
           <p class="card-description"><strong></strong><%= concert.concert.location %></p>
           <div class="d-flex justify-content-center align-items-center">
