modified welcome message

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
     <div class="heading">
       <h1 class="text-center neon-Text">Find your favourite concerts with us</h1>
       <% if user_signed_in? %>
-        <h5 class="text-center">Welcome <%= current_user.email  %></h5>
+        <h5 class="text-center welcome">Welcome back <%= current_user.email  %>!</h5>
       <% end %>
 
       <%# <h1 class="text-center neon-Text concertify">Concertify</h1> %>
