--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -34,6 +34,12 @@
     text-shadow: 1px 1px 20px rgb(17, 17, 17);
 
   }
+  .welcome {
+    font-family: $headers-font;
+    font-size: 14px;
+    color: rgb(98, 186, 197);
+
+  }
 }
 
 .second-banner {
