--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -20,11 +20,16 @@
   color: whitesmoke;
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 
   h1 {
     font-family: 'Bebas Neue', cursive;
     text-shadow: 0px 0px 20px rgb(17, 17, 17);
     font-size: 50px;
+    text-decoration: underline;
+    text-decoration-color: $color-accent;
 
   }
 
