I just moved the search bar a bit up, so that we can see the musicians in the photo, I think it looks cool :)

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -19,10 +19,10 @@
 .heading {
   color: whitesmoke;
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  margin-top: 50px;
+  margin-top: 80px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: top;
 
   h1 {
     font-family: 'Bebas Neue', cursive;
