--- a/app/assets/stylesheets/components/_search.scss
+++ b/app/assets/stylesheets/components/_search.scss
@@ -1,8 +1,8 @@
 .search-form-border {
   border: 2px solid $color-accent;
-  border-radius: 20px;
+  border-radius: 50px;
   width: 90%;
-  height: 60px;
+  height: 40px;
   margin: 0px auto;
   transition: all ease-in-out 0.3s;
 }
@@ -13,12 +13,14 @@
 }
 
 .search-input-dark {
-  background-color: $color-darker;
+  background-color: transparent;
   border: 0px;
   border-top-left-radius: 20px;
   border-bottom-left-radius: 20px;
   color: white;
   padding: 5px 20px;
+  font-family: $headers-font;
+
 }
 
 .search-input-dark::placeholder {
@@ -41,7 +43,8 @@
     background-color: $color-accent;
     color: white;
     font-size: 16px;
-    padding: 5px 20px;
+    font-family: $headers-font;
+    padding: 5px 40px;
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
     border: 0px;
