changed the welcome message on the home page. it now greets your first name, capitalized.

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,8 +14,9 @@
   </div>
   <div class="second-banner">
     <h1 class="text-center concertifyy">Concertify</h1>
+    <%= first_name = current_user.name.split[0] %>
     <% if user_signed_in? %>
-        <h5 class="text-center home-subtitle"><span class="cyan">Welcome back <%= current_user.email  %>!</span> Checkout these concerts...</h5>
+        <h5 class="text-center home-subtitle"><span class="cyan">Welcome back <%= first_name.capitalize  %>!</span> Checkout these concerts...</h5>
       <% else %>
       <h1 class="text-center home-subtitle ">Checkout these concerts!</h1>
       <% end %>
