--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -22,7 +22,7 @@
           <li class="nav-item dropdown">
             <div class="dropdown-toggle" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <% if current_user.photo.key %>
-                <%= cl_image_tag current_user.photo.key, height: 40, width: 40, radius: 100 %>
+                <%= cl_image_tag current_user.photo.key, height: 40, width: 40, radius: 100, background: "#202020" %>
               <% else %>
                 <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar" %>
               <% end %>
