--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -2,7 +2,7 @@
 <div class="layout-container">
 
   <div class="banner-one">
-    <h1 class="text-center">Who do you want to see?</h1>
+    <h1 class="text-center">Who do you want to see??</h1>
     <%= form_with url: artists_path, method: :get, class: "d-flex search-form-border" do %>
       <%= text_field_tag :query,
         params[:query],
