--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -9,6 +9,10 @@
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
       <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
     <% end %>
+    <%= f.input :photo,
+                hint: "You can change your profile picute here",
+                required: false,
+                input_html: { autocomplete: "name" }%>
     <%= f.input :name,
                 hint: "leave it blank if you don't want to change it",
                 required: false,
