--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -30,6 +30,7 @@
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
               <%= link_to "Followed Artists", followed_artists_path, class: "dropdown-item" %>
               <%= link_to "Saved Concerts", saved_concerts_path , class: "dropdown-item" %>
+              <%= link_to "My Profile", user_path(current_user) , class: "dropdown-item" %>
               <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
             </div>
           </li>
