--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -10,26 +10,19 @@
       <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
     <% end %>
     <%= f.input :photo,
-                hint: "You can change your profile picute here",
+                hint: "You can change your profile picture here",
                 required: false,
                 input_html: { autocomplete: "name" }%>
     <%= f.input :name,
-                hint: "leave it blank if you don't want to change it",
+                hint: "Optional",
                 required: false,
                 input_html: { autocomplete: "name" }%>
     <%= f.input :address,
-                hint: "leave it blank if you don't want to change it",
+                hint: "Optional",
                 required: false,
                 input_html: { autocomplete: "address" }%>
-    <%= f.input :password,
-                hint: "leave it blank if you don't want to change it",
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
     <%= f.input :current_password,
-                hint: "we need your current password to confirm your changes",
+                hint: "Enter your current password to confirm",
                 required: true,
                 input_html: { autocomplete: "current-password" } %>
   </div>
@@ -38,9 +31,5 @@
     <%= f.button :submit, "Update" %>
   </div>
 <% end %>
-
-<h3>Cancel my account</h3>
-
-<div>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %></div>
 
 <%= link_to "Back", :back %>
