--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -18,6 +18,10 @@
                   hint: "Optional",
                   required: false,
                   input_html: { autocomplete: "name" }%>
+       <div class="mb-3">
+        <%= f.label :country_code, "Country *", class: "form-label required" %>
+        <%= f.country_select :country_code, {}, {class: "form-select"} %>
+      </div>
       <%= f.input :address,
                   hint: "Optional",
                   required: false,
