--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container col-6">
+<div class="container col-6 py-5">
   <h2>Sign up to Concertify!</h2>
 
   <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), data: { turbo: :false }) do |f| %>
@@ -18,6 +18,10 @@
                   required: true,
                   autofocus: true,
                   input_html: { autocomplete: "email" }%>
+      <div class="mb-3">
+        <%= f.label :country_code, "Country *", class: "form-label required" %>
+        <%= f.country_select :country_code, {}, {class: "form-select"} %>
+      </div>
       <%= f.input :address,
                   required: true,
                   autofocus: true,
