--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,5 +1,8 @@
-<div class="container py-5">
-  <h2>Edit my profile</h2>
+<div class="form-container">
+
+  <div class="form-box">
+
+    <h1 class="text-center login-header">Edit my profile</h1>
 
   <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
     <%= f.error_notification %>
@@ -29,9 +32,10 @@
     </div>
 
     <div class="form-actions">
-      <%= f.button :submit, "Update", class: "btn btn-primary" %>
+      <%= f.button :submit, "Update", class: "btn-accent" %>
     </div>
   <% end %>
 
-  <%= link_to "Back", :back %>
+    <%= render "devise/shared/links" %>
+  </div>
 </div>
