--- a/app/assets/stylesheets/pages/_artists_index.scss
+++ b/app/assets/stylesheets/pages/_artists_index.scss
@@ -1,12 +1,20 @@
-.card-artist-container {
+.layout-artists-container {
+  background-color: #292929;
   display: flex;
+  justify-content: center;
   flex-direction: column;
+  align-items: center;
+  padding: 50px 100px;
+}
+
+.card-artist-container {
+  display: grid;
+  grid-template-columns: 500px 500px;
   gap: 30px;
   padding: 30px;
   background-color: $color-darker;
-  margin: 0px 100px;
+  margin: 0px 0px;
   border-radius: 10px;
-
 }
 
 .artist-card {
@@ -15,6 +23,10 @@
   background-color: $color-dark;
   padding: 20px;
   border-radius: 15px;
+  transition: all ease-in-out 0.3s;
+}
+.artist-card:hover {
+  box-shadow: 0px 0px 30px rgba(42, 195, 201, 0.459) ;
 }
 
 .artist-card-img  {
