--- a/app/assets/stylesheets/components/_search.scss
+++ b/app/assets/stylesheets/components/_search.scss
@@ -1,7 +1,7 @@
 .search-form-border {
   border: 2px solid $color-accent;
   border-radius: 50px;
-  width: 90%;
+  width: 750px;
   height: 40px;
   margin: 0px auto;
   transition: all ease-in-out 0.3s;
