--- a/app/assets/stylesheets/pages/_artists_index.scss
+++ b/app/assets/stylesheets/pages/_artists_index.scss
@@ -105,3 +105,10 @@
   }
 
 }
+.back-btn {
+  background-color: #292929;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 100px;
+}
