--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -13,44 +13,47 @@
     <% end %>
   </div>
 
-
-
     <% if @results %>
       <p class="text-light"><%= @results.count %> Artists found</p>
       <% if @results.empty? %>
         <p class="text-light">Unfortunately no artists could be found. Please try again.</p>
       <% else %>
+
         <div class="card-artist-container">
-        <% @results.each do |artist| %>
-        <div class="artist-card">
-          <div class="artist-card-img">
-            <% if artist["images"][0].present? %>
-              <img id="x" src="<%= artist["images"][0]["url"] %>" alt="artist photo">
-            <% else %>
-              <img id="x" src="https://images.unsplash.com/photo-1605722243979-fe0be8158232?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8Mnx8fGVufDB8fHx8&w=1000&q=80" alt="artist photo">
-            <% end %>
-          </div>
-          <div class="artist-card-body">
-            <%= simple_form_for @artist do |f| %>
-              <%= f.hidden_field :spotify_id, value: artist["id"]  %>
-              <%= f.hidden_field :name, value: artist["name"]  %>
+          <% @results.each do |artist| %>
+
+          <div class="artist-card">
+            <div class="artist-card-img">
               <% if artist["images"][0].present? %>
-                <%= f.hidden_field :image_url, value: artist["images"][0]["url"] %>
+                <img id="x" src="<%= artist["images"][0]["url"] %>" alt="artist photo">
+              <% else %>
+                <img id="x" src="https://images.unsplash.com/photo-1605722243979-fe0be8158232?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8Mnx8fGVufDB8fHx8&w=1000&q=80" alt="artist photo">
               <% end %>
-              <% if artist["genres"].present? %>
-                <%= f.hidden_field :genres, value: artist["genres"]%>
-              <% end %>
-              <%= f.submit artist["name"], class: "artist-card-title"%>
-            <% end  %>
-            <div class="artist-card-btn">
             </div>
-          </div>
-        </div>
+            <div class="artist-card-body">
+              <%= simple_form_for @artist do |f| %>
+                <%= f.hidden_field :spotify_id, value: artist["id"]  %>
+                <%= f.hidden_field :name, value: artist["name"]  %>
+                <% if artist["images"][0].present? %>
+                  <%= f.hidden_field :image_url, value: artist["images"][0]["url"] %>
+                <% end %>
+                <% if artist["genres"].present? %>
+                  <%= f.hidden_field :genres, value: artist["genres"]%>
+                <% end %>
+                <%= f.submit artist["name"], class: "artist-card-title"%>
+              <% end  %>
+              <div class="artist-card-btn"></div>
+            </div>
+           </div>
         <% end %>
+
       <% end %>
+
     <% end %>
+
   </div>
-  <div>
+
+  <div class="back-btn">
     <%= link_to "Go back", root_path, class: "btn btn-light my-5 rounded" %>
   </div>
 </div>
