--- a/app/assets/stylesheets/components/_layout.scss
+++ b/app/assets/stylesheets/components/_layout.scss
@@ -1,5 +1,6 @@
 .layout-container {
   background-color: #292929;
+  background-color: #161616;
   display: flex;
   justify-content: center;
   flex-direction: column;
