--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,18 +1,96 @@
-<!-- app/views/users/show.html.erb -->
-<div class="container py-5">
-  <% first_name = current_user.name.split[0] %>
 
-  <h1><%= first_name.capitalize %>'s Profile</h1>
-  <p><strong>Name:</strong> <%= @user.name %></p>
-  <p><strong>Email:</strong> <%= @user.email %></p>
-  <p><strong>Address:</strong> <%= @user.address %></p>
+<div class="layout-container-profile">
+    <div class="banner-one">
+      <h1 class="text-center">My Profile</h1>
+    </div>
 
-  <p>To see your favourite artists, click <%= link_to "here", followed_artists_path %></p>
-  <p>For all your saved concerts, click <%= link_to "here", saved_concerts_path %></p>
+  <div class="profile-container">
 
-  <button class="btn-accent"><%= link_to "Edit my Profile", edit_user_registration_path%></button>
 
-  <h3>Cancel my account</h3>
 
-  <div>Unhappy? <%= button_to "Cancel my account", cancel_user_registration_path, data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %></div>
+    <div class="user-component">
+      <% if current_user.photo.key %>
+        <%= cl_image_tag current_user.photo.key, class: "profile-img" %>
+      <% else %>
+        <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "profile-img" %>
+      <% end %>
+
+      <% first_name = current_user.name.split[0] %>
+
+      <h1><%= first_name.capitalize %></h1>
+      <div class="text-left">
+        <p class="text-left"><strong>Full name:</strong> <%= @user.name.capitalize %></p>
+        <p class="text-left"><strong><i class="fa-solid fa-envelope"></i> </strong> <%= @user.email %></p>
+        <p><strong><i class="fa-solid fa-location-dot"></i> </strong> <%= @user.address %></p>
+        <br>
+        <div class="text-center">
+          <p><%= link_to "Edit Profile", edit_user_registration_path, class: "edit-btn"%></p>
+        </div>
+      </div>
+    </div>
+
+    <div class="concerts-title">
+      <p> <%= link_to "Saved Concerts", saved_concerts_path %></p>
+    </div>
+
+    <div class="artists-title">
+      <p><%= link_to "Favourite Artists", followed_artists_path %></p>
+    </div>
+
+    <div class="genres-title">
+      <p>Liked Genres</p>
+    </div>
+
+    <div class="concerts-component">
+      <% if @saved_concerts.empty? %>
+        <p>You don't have any concerts saved.</p>
+      <% else %>
+        <div class="sub-container">
+          <% @saved_concerts.each do |concert|   %>
+            <div class="concert-profile-card">
+                <%# <img src="https://media.istockphoto.com/id/1193274679/photo/excited-crowd-on-a-rock-concert.jpg?s=612x612&w=0&k=20&c=330XDxllhunHf5dt_IwMO2yxPBjXb5j_WMkf_0oWBmU=" alt="concert image"> %>
+              <div class="dt">
+                <h4><%= concert.concert.date.strftime("%d") %></h4>
+                <p><%= concert.concert.date.strftime("%B") %></p>
+              </div>
+              <div class="art">
+                <p><%= link_to concert.concert.artist.name, concert_path(concert.concert) %></p>
+              </div>
+
+
+            </div>
+          <% end %>
+        </div>
+      <% end %>
+
+    </div>
+
+    <div class="artists-component">
+      <div class="sub-container">
+        <% @followed_artists.each do |artist|   %>
+          <div class="artist-card-profile">
+            <img src="https://images.unsplash.com/photo-1605722243979-fe0be8158232?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8Mnx8fGVufDB8fHx8&w=1000&q=80" alt="artist photo">
+            <p><%= link_to "#{artist.artist.name}", artist_path(artist.artist)%></p>
+          </div>
+        <% end %>
+      </div>
+    </div>
+
+
+    <div class="genres-component">
+      <div class="sub-container">
+        <% @genres.each do |genre|   %>
+          <%# <div class="artist-card-profile"> %>
+            <p><%= genre.name %></p>
+        <% end %>
+      </div>
+    </div>
+
+
+  </div>
+
+  <div class="banner-one">
+    <h5 class="text-center"><%= button_to "Cancel account", cancel_user_registration_path, data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete, class:"cancel-btn" %></h5>
+  </div>
+
 </div>
