--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -29,22 +29,17 @@
       </div>
     </div>
 
-    <div class="concerts-title">
-      <p> <%= link_to "Saved Concerts", saved_concerts_path %></p>
-    </div>
 
-    <div class="artists-title">
-      <p><%= link_to "Favourite Artists", followed_artists_path %></p>
-    </div>
 
-    <div class="genres-title">
-      <p>Liked Genres</p>
-    </div>
+
+
+
 
     <div class="concerts-component">
       <% if @saved_concerts.empty? %>
         <p>You don't have any concerts saved.</p>
       <% else %>
+        <p class="title-1" ><%= link_to "Saved Concerts", saved_concerts_path %></p>
         <div class="sub-container">
           <% @saved_concerts.each do |concert|   %>
             <div class="concert-profile-card">
@@ -66,6 +61,8 @@
     </div>
 
     <div class="artists-component">
+      <p class="title-1" ><%= link_to "Favourite Artists", followed_artists_path %></p>
+
       <div class="sub-container">
         <% @followed_artists.each do |artist|   %>
           <div class="artist-card-profile">
@@ -78,6 +75,7 @@
 
 
     <div class="genres-component">
+      <p class="title-1" >Liked Genres</p>
       <div class="sub-container">
         <% @genres.each do |genre|   %>
           <%# <div class="artist-card-profile"> %>
