--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -67,10 +67,11 @@
       font-family: 'Bebas Neue', cursive;
       font-size: 34px;
       color: $color-accent;
-      margin-bottom: 60px;
+      margin-bottom: 40px;
     }
 
     img {
+      margin-top: 40px;
       margin-bottom: 30px;
       box-shadow: 0px 0px 20px rgba(73, 212, 212, 0.712);
     }
