--- a/app/assets/stylesheets/pages/_artists_index.scss
+++ b/app/assets/stylesheets/pages/_artists_index.scss
@@ -6,7 +6,10 @@
   background-color: $color-darker;
   margin: 0px 100px;
   border-radius: 10px;
+}
 
+.artist-card-show-container {
+  display: flex;
 }
 
 .artist-card {
@@ -17,12 +20,82 @@
   border-radius: 15px;
 }
 
+.artist-card-show {
+  padding: 20px;
+  margin: 10px;
+  width: 540px;
+  background-color: $color-dark;
+  border-radius: 15px;
+  border: 1.5px solid #39AEA9;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+.artist-card-event-show {
+  padding: 20px;
+  margin-top: 15px;
+  margin-bottom: 0px;
+  width: 1100px;
+  background-color: $color-dark;
+  color: white;
+  border-radius: 15px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+.show-card-title {
+  font-family: $headers-font;
+  color: $color-white;
+  font-weight: 400;
+  font-size: 32px;
+}
+
+.event-title-show {
+  font-size: 18px;
+  color: #39AEA9;
+  font-weight: 400;
+}
+
+.show-artist-title {
+  font-family: $headers-font;
+  color: $color-white;
+  font-weight: 400;
+  font-size: 50px;
+  text-align: center;
+}
+
+.artist-card-show-text {
+  color: $color-white;
+  text-align: center;
+  font-size: 14px;
+}
+
+.artist-genre-list {
+  list-style-type: none;
+  text-transform: capitalize;
+}
+
 .artist-card-img  {
   background-color: lightcoral;
   width: 200px;
   height: 150px;
   border-radius: 10px;
   margin-right: 15px;
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    border-radius: 10px;
+  }
+
+}
+
+.artist-img-banner  {
+  width: 1100px;
+  height: 275px;
+  border-radius: 10px;
+  margin-bottom: 25px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 
   img {
     width: 100%;
