--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -13,14 +13,13 @@
     <% end %>
   </div>
 
-
   <div class="card-artist-container">
-    <% if @results %>
-        <% @results.each do |artist| %>
+    <% if @artists %>
+        <% @artists.each do |artist| %>
         <div class="artist-card">
           <div class="artist-card-img">
-            <% if artist["images"][0].present? %>
-              <img id="x" src="<%= artist["images"][0]["url"] %>" alt="artist photo">
+            <% if artist["image_url"].present? %>
+              <img id="x" src="<%= artist["image_url"] %>" alt="artist photo">
             <% else %>
               <img id="x" src="https://images.unsplash.com/photo-1605722243979-fe0be8158232?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8Mnx8fGVufDB8fHx8&w=1000&q=80" alt="artist photo">
             <% end %>
@@ -28,8 +27,8 @@
           <div class="artist-card-body">
             <%= simple_form_for @artist do |f| %>
               <%= f.hidden_field :name, value: artist["name"]  %>
-              <% if artist["images"][0].present? %>
-                <%= f.hidden_field :image_url, value: artist["images"][0]["url"] %>
+              <% if artist["image_url"].present? %>
+                <%= f.hidden_field :image_url, value: artist["image_url"] %>
               <% end %>
               <% if artist["genres"].present? %>
                 <%= f.hidden_field :genres, value: artist["genres"]%>
