--- a/app/assets/stylesheets/pages/_artists_index.scss
+++ b/app/assets/stylesheets/pages/_artists_index.scss
@@ -38,7 +38,9 @@
 
   img {
     width: 100%;
+    min-width: 100px;
     height: 100%;
+    min-height: 100px;
     object-fit: cover;
     object-position: center;
     border-radius: 10px;
@@ -47,7 +49,7 @@
 }
 
 .artist-card-body {
-  width: 100%;
+  width: 300px;
   background-color: lightblue;
   background-color: $color-dark;
   color: white;
@@ -75,8 +77,9 @@
     border: none;
     background-color: transparent;
     color: $color-accent;
-    font-size: 24px;
+    font-size: 20px;
     font-weight: bold;
+    width: 250px;
   }
 
 }
