--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -6,8 +6,8 @@
 
 
 <div class="artist-img-banner">
-  <% if @artist["image_url"].present? %>
-    <img id="x" src="<%= artist["image_url"] %>" alt="artist photo">
+  <% if @artist.image_url.present? %>
+    <img id="x" src="<%= @artist.image_url %>" alt="artist photo">
   <% else %>
     <img id="x" src="https://images.unsplash.com/photo-1605722243979-fe0be8158232?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8Mnx8fGVufDB8fHx8&w=1000&q=80" alt="artist photo">
   <% end %>
