--- a/app/views/concerts/index.html.erb
+++ b/app/views/concerts/index.html.erb
@@ -43,15 +43,12 @@
 
 
 
-
-
-
-
-
-
-
-
-  <div>
+<div class="banner-one text-center">
     <%= link_to "Go back", root_path, class: "btn btn-light my-5 rounded" %>
+
   </div>
+
+
+
+
 </div>
