--- a/app/views/concerts/index.html.erb
+++ b/app/views/concerts/index.html.erb
@@ -14,6 +14,21 @@
   </div>
 
 
+
+<div
+data-controller="map"
+data-map-markers-value="<%= @markers.to_json %>"
+data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"
+id='map'
+style='width: 100%; height: 300px; border-radius: 10px'></div>
+
+
+
+
+
+
+
+
   <div class="card-concert-container">
     <% @concerts.each do |concert|   %>
 
