--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -1,54 +1,71 @@
-<div class="layout-container">
+<div class="layout-container-artist-show">
 
-<div class="banner-show">
-  <h1 class="show-artist-title"><%= @artist.name%></h1>
-</div>
+  <div class="banner-show-round">
+    <% if @artist.image_url.present? %>
+      <img id="round-artist" src="<%= @artist.image_url %>" alt="artist photo">
+    <% else %>
+      <img id="round-artist" src="https://images.unsplash.com/photo-1605722243979-fe0be8158232?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8Mnx8fGVufDB8fHx8&w=1000&q=80" alt="artist photo">
+    <% end %>
 
-
-<div class="artist-img-banner">
-  <% if @artist.image_url.present? %>
-    <img id="x" src="<%= @artist.image_url %>" alt="artist photo">
-  <% else %>
-    <img id="x" src="https://images.unsplash.com/photo-1605722243979-fe0be8158232?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8Mnx8fGVufDB8fHx8&w=1000&q=80" alt="artist photo">
-  <% end %>
-</div>
-
-<div class="artist-card-show-container">
-  <div class="artist-card-show">
-    <div class="show-card-title">
-      <h3 class="text-center">Genres</h3>
-    </div>
-    <div class="artist-card-show-text">
-      <% @artist.genres.each do |genre| %>
-        <li class="artist-genre-list"><%= genre.name %></li>
-      <% end %>
-    </div>
+    <h1 class="show-artist-title"><%= @artist.name%></h1>
   </div>
 
-  <div class="artist-card-show">
-    <div class="show-card-title">
-      <h3 class="text-center">About <%= @artist.name %></h3>
+  <div class="artist-information">
+    <div class="artist-description-show-container">
+      <div class="artist-genres-show">
+        <% @artist.genres.each do |genre| %>
+          <p class="artist-genre-list"><%= genre.name %></p>
+        <% end %>
+      </div>
+
+      <div class="artist-description-show">
+
+          <% if @artist.description %>
+            <p> <%= @artist.description %> </p>
+          <% end %>
+      </div>
+
     </div>
-    <div class="artist-card-show-text">
-      <% if @artist.description %>
-        <p><%= @artist.description %></p>
-      <% end %>
+
+
+    <div class="artist-follow-show">
+      <%= button_to "Follow", {action: "create", :artist_id => @artist.id, :controller => "followed_artists", method: :post}, {class: "btn-accent"} %>
     </div>
+
   </div>
-</div>
 
 
-<%= button_to "Follow this artist!", {action: "create", :artist_id => @artist.id, :controller => "followed_artists", method: :post}, {class: "btn-accent-show"} %>
+  <div class="artist-concerts-container">
+    <h3>NEXT CONCERTS</h3>
+
+
+
 
     <% @artist.concerts.each do |concert|   %>
-      <div class="artist-card-event-show">
-        <div class="card-body">
-          <p class="event-title-show">Concert location:</p><p><%= concert.location %></p>
-          <p class="event-title-show">Additional information:</p><p><%= concert.description %></p>
-          <p class="event-title-show">Date:</p><p><%= concert.date %></p>
-          <%= link_to "See more", concert_path(concert), class: "btn btn-info" %>
+      <div class="artist-concert-card-container">
+
+        <div class="artist-show-date">
+          <p class="event-title-show"><%= concert.date.strftime("%B") %></p>
+          <p class="event-title-show"><%= concert.date.strftime("%d") %></p>
+        </div>
+
+        <div class="artist-show-card-body">
+          <div class="x">
+            <p class="event-title-show"><strong> Location: </strong><%= concert.location %></p>
+            <p class="event-title-show"><strong> Info: </strong><%= concert.description %></p>
+            <p class="event-title-show"><strong> Year: </strong><%= concert.date.strftime("%Y") %></p>
+
+          </div>
+          <div class="z">
+            <%= link_to "More info", concert_path(concert), class: "btn-accent" %>
+
+          </div>
         </div>
       </div>
     <% end %>
-  <%= link_to "Go back", root_path, class: "btn-show-back" %>
+
+
+  </div>
+  <%= link_to "Go back", root_path, class: "btn-show-back margin-top" %>
+
 </div>
