--- a/app/views/concerts/show.html.erb
+++ b/app/views/concerts/show.html.erb
@@ -3,10 +3,8 @@
   <div class="show-concert-container">
     <div class="concert-title">
       <h2><%= link_to @concert.artist.name.upcase, artist_path(@concert.artist) %></h2>
-      <p>Concert in <u><%= @concert.date.strftime("%B %Y") %></u></p>
+      <p>Concert in <u><%= @concert.date.strftime("%d %B %Y") %></u></p>
     </div>
-
-
 
 
 
@@ -19,12 +17,23 @@
 
 
     <div class="concert-body">
-      <img src="https://cdn.vysokeskoly.cz/czech-universities/uploads/2020/01/3380.jpg" alt="concert photo">
-      <div class="description">
+      <div class="img-map">
+        <img src="https://cdn.vysokeskoly.cz/czech-universities/uploads/2020/01/3380.jpg" alt="concert photo">
+                                <div class="map-box"
+        data-controller="map"
+        data-map-markers-value="<%= @markers.to_json %>"
+        data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"
+        id='map'
+        style='width: 50%; height: 300px;  border-top-right-radius: 20px;'></div>
+
+
+      </div>
+
+      <div class="description mb-5">
         <div class="box-left">
           <p><strong style="color: #39AEA9">ABOUT: </strong><%= @concert.description %></p>
           <p><strong style="color: #39AEA9">WHERE: </strong><%= @concert.location %></p>
-          <p><strong style="color: #39AEA9">WHEN: </strong><%= @concert.date %></p>
+          <p><strong style="color: #39AEA9">WHEN: </strong><%= @concert.date.strftime("%d %B %Y") %></p>
         </div>
         <div class="box-right">
           <div class="box-price">
@@ -37,17 +46,15 @@
           </div>
 
           <div class="box-save">
-          <%= button_to "Save this concert", {action: "create", :concert_id => @concert.id, :controller => "saved_concerts", method: :post} %>
+            <%= button_to "Save this concert", {action: "create", :concert_id => @concert.id, :controller => "saved_concerts", method: :post} %>
           </div>
-
 
         </div>
       </div>
-    </div>
+
   </div>
 
   <div>
-    <%= link_to "Go back", root_path, class: "btn btn-light my-5" %>
   </div>
 </div>
 
